[build-system]
# requires: list of packages needed to build my package
requires = ["hatchling"]
# build-backend: name of the python object that frontends use to perform build
build-backend = "hatchling.build"

[project]
name = "chart-tools"
version = "0.1.3"
license = { file = "LICENSE" }
authors = [
    { name = "Ryan Young", email = "dev@ryayoung.com" },
]
maintainers = [
    { name = "Ryan Young", email = "dev@ryayoung.com" },
]
description = "Powerful visualizations, and an easy to use, interactive api for exploring and loading datasets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "seaborn",
    "matplotlib",
    "pandas",
    "numpy",
    "requests",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
keywords = [
    "visualization",
    "chart",
    "graph",
]

[project.urls]
"Documentation" = "https://github.com/ryayoung/chart-tools"
# "Website" = "https://colorado-crime.herokuapp.com/"


